<resources>
    <string name="app_name">Rock Paper Scissor 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_menu_text">Main Menu</string>
    <string name="exit_text">Exit</string>
    <string name="options_text">Options</string>
    <string name="credits_text">Credits</string>
    <string name="start_game_text">Start Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comp_name">System</string>
    <string name="result_text">Start Now</string>
    <string name="player_score_text">0</string>
    <string name="player_name">Player</string>
    <string name="comp_score_text">0</string>
    <string name="str_choice">%s</string>
<!--    <string name="draw_choice">"@drawable//%s"</string>-->
    <!-- Strings used for fragments for navigation -->
</resources>